The incompatibility was (seemingly) only because of one line of code, and i'm not even sure why that line was how it was.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 **/.pytest_cache
 **/.venv
+**/.venv_3.9.1
 **/.vscode
 **/__pycache__
 **.mp4
@@ -12,3 +13,7 @@
 **.egg-info
 **.prof
 **/.idea
+**/build
+**/rk_specs
+rk_xdsm.tex
+rk_xdsm.tikz
