--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -28,6 +28,7 @@ jobs:
         cache-dependency-path: setup.py
     - name: Install dependencies
       run: |
+        pip install pip==22.3.1  # required to install for petsc4py before v3.21.1
         pip install cython  # required to build petsc4py
         pip install petsc==3.21.0
         pip install petsc4py==3.21.0
