--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -16,10 +16,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up MPI
-      uses: mpi4py/setup-mpi@v1
+    - name: Install OS Packages:
+      uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        mpi: 'openmpi'
+        packages: openmpi-bin libopenmpi-dev libhdf5-openmpi-dev
+    # - name: Set up MPI
+    #   uses: mpi4py/setup-mpi@v1
+    #   with:
+    #     mpi: 'openmpi'
     - name: Set up Python 3.8
       uses: actions/setup-python@v3
       with:
@@ -31,6 +35,7 @@ jobs:
         pip install cython  # required to build petsc4py
         pip install petsc
         pip install petsc4py
+        CC="mpicc" HDF5_MPI="ON" pip install --no-binary=h5py ".[dev]"
         pip install ".[dev]"
     - name: Lint with pylint
       continue-on-error: true
