--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -19,7 +19,7 @@ jobs:
     - name: Install OS Packages
       run: |
         sudo apt-get update
-        sudo apt-get -y install openmpi-bin libopenmpi-dev libhdf5-openmpi-dev
+        sudo apt-get -y install openmpi-bin libopenmpi-dev libhdf5-openmpi-dev libopenblas64-dev
     - name: Set up Python 3.8
       uses: actions/setup-python@v3
       with:
