--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install cython  # required to build petsc4py
-        pip install --with-blas-lib= petsc
+        pip install petsc
         pip install petsc4py
         CC="mpicc" HDF5_MPI="ON" pip install --no-binary=h5py ".[dev]"
         pip install ".[dev]"
