--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v4
@@ -20,10 +20,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get -y install openmpi-bin libopenmpi-dev libhdf5-openmpi-dev
-    - name: Set up Python 3.9
+    - name: Set up Python 3.8
       uses: actions/setup-python@v3
       with:
-        python-version: "3.9"
+        python-version: "3.8"
         cache: "pip"
         cache-dependency-path: setup.py
     - name: Install dependencies
