Fixed missing symbols for con schedule.

--- a/.github/workflows/rkopenmdao_matrix_tests.yaml
+++ b/.github/workflows/rkopenmdao_matrix_tests.yaml
@@ -2,7 +2,7 @@ name: rkopenmdao matrix tests
 
 on:
   schedule:
-    - cron: 30 0 * * 1 # Monday 0:30
+    - cron: "30 0 * * 1" # Monday 0:30
   push:
     branches:
       - "maintenance/matrix_tests_CI"
