--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -28,12 +28,11 @@ jobs:
         cache-dependency-path: setup.py
     - name: Install dependencies
       run: |
-        CC="mpicc" HDF5_MPI="ON" pip install --no-binary=h5py ".[dev]"
+        CC="mpicc" HDF5_MPI="ON" pip install --no-binary=h5py h5py
         # pip install cython==3.0.12  # required to build petsc4py
         export PETSC_CONFIGURE_OPTIONS="--download-fblaslapack=1"
         pip install petsc
         pip install petsc4py
-        CC="mpicc" HDF5_MPI="ON" pip install --no-binary=h5py ".[dev]"
         pip install ".[dev]"
     - name: Lint with pylint
       continue-on-error: true
