--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -20,10 +20,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get -y install openmpi-bin libopenmpi-dev libhdf5-openmpi-dev
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v3
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v5
       with:
-        python-version: "3.8"
+        python-version: "3.9"
         cache: "pip"
         cache-dependency-path: setup.py
     - name: Install dependencies
@@ -32,8 +32,8 @@ jobs:
         export PETSC_CONFIGURE_OPTIONS="--download-fblaslapack=1"
         pip install petsc
         pip install petsc4py
+        pip install openmdao==3.33
         CC="mpicc" HDF5_MPI="ON" pip install --no-binary=h5py ".[dev]"
-        pip install ".[dev]"
     - name: Lint with pylint
       continue-on-error: true
       run: |
