--- a/.pylintrc
+++ b/.pylintrc
@@ -2,16 +2,16 @@
 max-args = 10
 max-attributes=12
 disable=no-else-return, no-else-raise
+extension-pkg-allow-list=mpi4py
 
 [BASIC]
-
-
 good-names=ax, im, x, y, i, j, f, g, t
 
 [FORMAT]
-
 max-line-length=88
 
 [SIMILARITIES]
+min-similarity-lines=10
 
-min-similarity-lines = 10
+[REFACTOR]
+min-public-methods=1
