--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -28,6 +28,7 @@ jobs:
         cache-dependency-path: setup.py
     - name: Install dependencies
       run: |
+        pip install --force-reinstall "setuptools<81"
         pip install cython  # required to build petsc4py
         export PETSC_CONFIGURE_OPTIONS="--download-fblaslapack=1"
         pip install petsc
