--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -28,10 +28,11 @@ jobs:
         cache-dependency-path: setup.py
     - name: Install dependencies
       run: |
+        echo 'setuptools<81' > constraints.txt
+        export PIP_CONSTRAINT=constraints.txt
         pip install cython  # required to build petsc4py
         export PETSC_CONFIGURE_OPTIONS="--download-fblaslapack=1"
         pip install petsc
-        export PIP_CONSTRAINT='setuptools<81' 
         pip install petsc4py
         pip install openmdao==3.33
         CC="mpicc" HDF5_MPI="ON" pip install --no-binary=h5py ".[dev]"
