--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -28,8 +28,7 @@ jobs:
         cache-dependency-path: setup.py
     - name: Install dependencies
       run: |
-        echo 'setuptools<81' > constraints.txt
-        export PIP_CONSTRAINT=constraints.txt
+        export PIP_CONSTRAINT=<(printf "setuptools<81\n")
         pip install cython  # required to build petsc4py
         export PETSC_CONFIGURE_OPTIONS="--download-fblaslapack=1"
         pip install petsc
