--- a/.github/workflows/rkopenmdao_tests.yaml
+++ b/.github/workflows/rkopenmdao_tests.yaml
@@ -39,8 +39,7 @@ jobs:
     - name: Lint with pylint
       continue-on-error: true
       run: |
-        pylint src tests setup.py
-        
+        pylint src tests
     - name: Run tests
       run: |
         mpirun -n 2 pytest --with-mpi tests
